# keto-buddy

./: .gitignore  config.py  drop_table.py  keto.db  pyproject.toml  readme.md  run.py  todo.txt
app/: __init__.py  forms.py  models.py  routes.py  seed_db.py
app/static/: style.css
app/templates/: _recipe_form.html  base.html  fruit_substitutions.html  index.html  ingredients.html  log.html  login.html  new_calculated_recipe.html  new_recipe.html  planner.html  recipes.html  signup.html  targets.html  veg_substitutions.html
