[project]
name = "keto-buddy"
version = "1.0.0"
description = "Local Flask app to plan ketogenic meals for a child with epilepsy"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.2.0",
    "flask",
    "flask-login>=0.6.3",
    "flask-sqlalchemy",
    "flask-wtf>=1.2.2",
]
requires-python = ">=3.9"

[tool.uv]
# Optional: default settings for uv
